ISCA_DRAM/10-20-test_cache_cpu_remap0_t104_spec_hmmer.log
[SNIPER] (0) Using trace file /home_masters/miz087/workplace/micro_exp/benchmarks/traces/hmmer/hmmer.0.sift
[SNIPER] (1) Using trace file /home_masters/miz087/workplace/micro_exp/benchmarks/traces/hmmer/hmmer.0.sift
[SNIPER] (2) Using trace file /home_masters/miz087/workplace/micro_exp/benchmarks/traces/hmmer/hmmer.0.sift
[SNIPER] (3) Using trace file /home_masters/miz087/workplace/micro_exp/benchmarks/traces/hmmer/hmmer.0.sift
[SNIPER] Start
----------BEGIN_INIT_STATS_MANAGER------------
----------END_INIT_STATS_MANAGER------------
[DvfsManager] Core 0 at 2.66 GHz (global clock 2.66 GHz)
[DvfsManager] Core 1 at 2.66 GHz (global clock 2.66 GHz)
[DvfsManager] Core 2 at 2.66 GHz (global clock 2.66 GHz)
[DvfsManager] Core 3 at 2.66 GHz (global clock 2.66 GHz)
Normal Cache Total set: 524288
[Ramulator config] SpeedEntry: nRFC(130), nREFI(3900), nREFI1B(256)
Each level size: 
32 4 2 2048 8192 
Here we initilize a off-chip model!
[Ramulator config] SpeedEntry: nRFC(130), nREFI(3900), nREFI1B(256)
Each level size: 
1 1 32 16384 8192 
now initialize a stacked dram unison cache
Executing Python script /scratch/miz087/results/isca/10-20-test_cache_cpu_remap0_t104_spec/sim.scripts.py
[SNIPER] --------------------------------------------------------------------------------
[SNIPER] Sniper using SIFT/trace-driven frontend
[SNIPER] Running full application in DETAILED mode
[SNIPER] --------------------------------------------------------------------------------

************recordStats once at 0
[Warning] power scale is less than 1, please check!
[Overall Power Consumption] Peak: 0, Dynamic: 0
[Warning] the power of processor is too small, we skip the temperature calculation!
[SNIPER] Enabling performance models

************recordStats once at 0
[Warning] power scale is less than 1, please check!
[Overall Power Consumption] Peak: 0, Dynamic: 0
[Warning] the power of processor is too small, we skip the temperature calculation!
[SNIPER] Setting instrumentation mode to DETAILED
[TRACE:0] [HOOKS] Entering ROI
[TRACE:1] [HOOKS] Entering ROI
[TRACE:2] [HOOKS] Entering ROI
[TRACE:3] [HOOKS] Entering ROI

************recordStats once at 998
[Warning] power scale is less than 1, please check!
[Overall Power Consumption] Peak: 0, Dynamic: 0
[Warning] the power of processor is too small, we skip the temperature calculation!
Traceback (most recent call last):
  File "/home_masters/miz087/workplace/micro_exp/tools/mcpat.py", line 1321, in <module>
    main(jobid = jobid, resultsdir = resultsdir, powertype = powertype, config = config, outputfile = outputfile, no_graph = no_graph, print_stack = not no_text, partial = partial)
  File "/home_masters/miz087/workplace/micro_exp/tools/mcpat.py", line 141, in main
    results = sniper_lib.get_results(jobid, resultsdir, partial = partial)
  File "/home_masters/miz087/workplace/micro_exp/tools/sniper_lib.py", line 47, in get_results
    results = parse_results_from_dir(resultsdir, partial = partial, metrics = metrics)
  File "/home_masters/miz087/workplace/micro_exp/tools/sniper_lib.py", line 162, in parse_results_from_dir
    siminfo = eval(open(siminfo).read())
  File "<string>", line 47
    33872,
        ^
SyntaxError: invalid syntax

************recordStats once at 1999
[Warning] power scale is less than 1, please check!
[Overall Power Consumption] Peak: 0, Dynamic: 0
[Warning] the power of processor is too small, we skip the temperature calculation!
Traceback (most recent call last):
  File "/home_masters/miz087/workplace/micro_exp/tools/mcpat.py", line 1321, in <module>
    main(jobid = jobid, resultsdir = resultsdir, powertype = powertype, config = config, outputfile = outputfile, no_graph = no_graph, print_stack = not no_text, partial = partial)
  File "/home_masters/miz087/workplace/micro_exp/tools/mcpat.py", line 141, in main
    results = sniper_lib.get_results(jobid, resultsdir, partial = partial)
  File "/home_masters/miz087/workplace/micro_exp/tools/sniper_lib.py", line 47, in get_results
    results = parse_results_from_dir(resultsdir, partial = partial, metrics = metrics)
  File "/home_masters/miz087/workplace/micro_exp/tools/sniper_lib.py", line 162, in parse_results_from_dir
    siminfo = eval(open(siminfo).read())
  File "<string>", line 47
    33872,
        ^
SyntaxError: invalid syntax

************recordStats once at 2999
[Warning] power scale is less than 1, please check!
[Overall Power Consumption] Peak: 31.3334, Dynamic: 16.5966
*[Hotspot] begin initialization!
[DTM Trigger] CPU_MAX(THRES): 74.567(104.000), DRAM_MAX(THRES): 62.830(85.000)
	Current DTM method: 1
Here we try remapping!
Traceback (most recent call last):
  File "/home_masters/miz087/workplace/micro_exp/tools/mcpat.py", line 1321, in <module>
    main(jobid = jobid, resultsdir = resultsdir, powertype = powertype, config = config, outputfile = outputfile, no_graph = no_graph, print_stack = not no_text, partial = partial)
  File "/home_masters/miz087/workplace/micro_exp/tools/mcpat.py", line 141, in main
    results = sniper_lib.get_results(jobid, resultsdir, partial = partial)
  File "/home_masters/miz087/workplace/micro_exp/tools/sniper_lib.py", line 47, in get_results
    results = parse_results_from_dir(resultsdir, partial = partial, metrics = metrics)
  File "/home_masters/miz087/workplace/micro_exp/tools/sniper_lib.py", line 162, in parse_results_from_dir
    siminfo = eval(open(siminfo).read())
  File "<string>", line 47
    33872,
        ^
SyntaxError: invalid syntax
Vault num: 32, Bank num: 8, Row num: 2048
Vault#0 Delay: 0
Vault#1 Delay: 0
Vault#2 Delay: 0
Vault#3 Delay: 0
Vault#4 Delay: 0
Vault#5 Delay: 0
Vault#6 Delay: 0
Vault#7 Delay: 0
Vault#8 Delay: 0
Vault#9 Delay: 0
Vault#10 Delay: 0
Vault#11 Delay: 0
Vault#12 Delay: 0
Vault#13 Delay: 0
Vault#14 Delay: 0
Vault#15 Delay: 0
Vault#16 Delay: 0
Vault#17 Delay: 0
Vault#18 Delay: 0
Vault#19 Delay: 0
Vault#20 Delay: 0
Vault#21 Delay: 0
Vault#22 Delay: 0
Vault#23 Delay: 0
Vault#24 Delay: 0
Vault#25 Delay: 0
Vault#26 Delay: 0
Vault#27 Delay: 0
Vault#28 Delay: 0
Vault#29 Delay: 0
Vault#30 Delay: 0
Vault#31 Delay: 0
-----and here we finish handling remapping results in cache controller! the Latency: 0
Bus Delay: 0, Process Latency: 0
---invalid_cnt: 0, total: 524288

************recordStats once at 3993
[Warning] power scale is less than 1, please check!
[Overall Power Consumption] Peak: 31.3334, Dynamic: 16.5966
error: invalid trace file format
Traceback (most recent call last):
  File "/home_masters/miz087/workplace/micro_exp/tools/mcpat.py", line 1321, in <module>
    main(jobid = jobid, resultsdir = resultsdir, powertype = powertype, config = config, outputfile = outputfile, no_graph = no_graph, print_stack = not no_text, partial = partial)
  File "/home_masters/miz087/workplace/micro_exp/tools/mcpat.py", line 141, in main
    results = sniper_lib.get_results(jobid, resultsdir, partial = partial)
  File "/home_masters/miz087/workplace/micro_exp/tools/sniper_lib.py", line 47, in get_results
    results = parse_results_from_dir(resultsdir, partial = partial, metrics = metrics)
  File "/home_masters/miz087/workplace/micro_exp/tools/sniper_lib.py", line 162, in parse_results_from_dir
    siminfo = eval(open(siminfo).read())
  File "<string>", line 47
    33872,
        ^
SyntaxError: invalid syntax
[SNIPER] End
[SNIPER] Elapsed time: 62.01 seconds
[SNIPER] Running McPAT
Traceback (most recent call last):
  File "/home_masters/miz087/workplace/micro_exp/run-sniper", line 883, in <module>
    gen_simout.generate_simout(resultsdir = outputdir, output = open(os.path.join(outputdir, 'sim.out'), 'w'), silent = True)
  File "/home_masters/miz087/workplace/micro_exp/tools/gen_simout.py", line 9, in generate_simout
    res = sniper_lib.get_results(jobid = jobid, resultsdir = resultsdir, partial = partial)
  File "/home_masters/miz087/workplace/micro_exp/tools/sniper_lib.py", line 47, in get_results
    results = parse_results_from_dir(resultsdir, partial = partial, metrics = metrics)
  File "/home_masters/miz087/workplace/micro_exp/tools/sniper_lib.py", line 162, in parse_results_from_dir
    siminfo = eval(open(siminfo).read())
  File "<string>", line 47
    33872,
        ^
SyntaxError: invalid syntax
--no-roi 
--power 
-n 4
-c cache_cpu_remap0
-d /scratch/miz087/results/isca/10-20-test_cache_cpu_remap0_t104_spec
-T /home/miz087/workplace/micro_exp/benchmarks/traces/hmmer/hmmer.0.sift,/home/miz087/workplace/micro_exp/benchmarks/traces/hmmer/hmmer.0.sift,/home/miz087/workplace/micro_exp/benchmarks/traces/hmmer/hmmer.0.sift,/home/miz087/workplace/micro_exp/benchmarks/traces/hmmer/hmmer.0.sift
hehe /home/miz087/workplace/micro_exp/benchmarks/traces/hmmer/hmmer.0.sift,/home/miz087/workplace/micro_exp/benchmarks/traces/hmmer/hmmer.0.sift,/home/miz087/workplace/micro_exp/benchmarks/traces/hmmer/hmmer.0.sift,/home/miz087/workplace/micro_exp/benchmarks/traces/hmmer/hmmer.0.sift
-g --perf_model/thermal/cpu_temp_thres=104
-g --perf_model/remap_config/on_chip_wb=false
copy HotSpot and ramulator files to /scratch/miz087/results/isca/10-20-test_cache_cpu_remap0_t104_spec
haha: /home_masters/miz087/workplace/micro_exp/run-sniper -n 4 -m 'localhost' -d '/scratch/miz087/results/isca/10-20-test_cache_cpu_remap0_t104_spec' -sthermalstats --power -c cache_cpu_remap0 -g --perf_model/thermal/cpu_temp_thres=104 -g --perf_model/remap_config/on_chip_wb=false --curdir=/home_masters/miz087/workplace/micro_exp/benchmarks --traces=/home/miz087/workplace/micro_exp/benchmarks/traces/hmmer/hmmer.0.sift,/home/miz087/workplace/micro_exp/benchmarks/traces/hmmer/hmmer.0.sift,/home/miz087/workplace/micro_exp/benchmarks/traces/hmmer/hmmer.0.sift,/home/miz087/workplace/micro_exp/benchmarks/traces/hmmer/hmmer.0.sift
